--- a/TrinityCreator/ItemPreview.xaml
+++ b/TrinityCreator/ItemPreview.xaml
@@ -30,14 +30,14 @@
                         <Label Name="armorEquip" Content="Chest" Foreground="White" FontSize="14" HorizontalAlignment="Left"/>
                         <Label Name="armorMaterial" Content="Cloth" Foreground="White" FontSize="14" HorizontalAlignment="Right"/>
                     </DockPanel>
+                    <Label Name="itemArmorLbl" Content="xxxx Armor" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
+                    <Label Name="itemBlockLbl" Content="xxx Block" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
                 </StackPanel>
-                <Label Name="itemArmorLbl" Content="xxxx Armor" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
-                <Label Name="itemBlockLbl" Content="xxx Block" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
-                <Label Name="otherStatsLbl" Content="+ xx Agility" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
+                    <Label Name="otherStatsLbl" Content="+ xx Agility" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
             
                 <!-- Only visible when sockets available -->
                 <!-- todo: Ensure you can for example have two yellow sockets -->
-                <StackPanel>
+                <StackPanel Name="gemsPanel">
                     <DockPanel Name="socket1" Margin="5,0,0,0">
                         <Image Source="Resources/metasocket.png" Width="15" Height="15" />
                         <Label Content="Color Socket" Foreground="Gray" />
