--- a/TrinityCreator/ItemPreview.xaml
+++ b/TrinityCreator/ItemPreview.xaml
@@ -61,13 +61,12 @@
                 <Label Name="itemClassRequirementsLbl" Content="Classes: All" Foreground="Red" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
                 <Label Name="itemRaceRequirementsLbl" Content="Races: All" Foreground="Red" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
                 <Label Name="itemLevelRequiredLbl" Content="Requires Level xx" Foreground="Red" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
-                <Label Name="itemIlevelLbl" Content="Item Level xxx" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
 
                 <Label Name="itemBonusStatsLbl" Content="Equip: Improves hit chance by 8." Foreground="#0c0" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
 
 
                 <!-- Only visible when repairable -->
-                <Label Name="itemDurabilityLbl" Content="(Durability xx / xx)" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
+                <Label Name="itemDurabilityLbl" Content="(Durability 100 / 100)" Foreground="White" FontSize="14" HorizontalAlignment="Left" Margin="0,-10,0,0"/>
                 <Label Name="itemQuoteLbl" Content="''This is a quote for your item''" Foreground="#ddcba5" FontSize="14" Visibility="Collapsed" />
 
                 <!-- Buy price -->
