--- a/TrinityCreator/ItemPage.xaml
+++ b/TrinityCreator/ItemPage.xaml
@@ -32,7 +32,7 @@
                         <Label FontSize="12" Content="Item Class" Height="30" Margin="0,152,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="77"/>
                         <ComboBox x:Name="itemClassCb" Height="25" Margin="85,153,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectedIndex="0" SelectionChanged="itemClassCb_SelectionChanged" />
 
-                        <Label FontSize="12" Content="Item SubClass" Height="30" Margin="0,182,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="88"/>
+                        <Label FontSize="12" Content="Item Subclass" Height="30" Margin="0,182,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="88"/>
                         <ComboBox x:Name="itemSubClassCb" Height="25" Margin="85,183,9,0" VerticalAlignment="Top" IsReadOnly="True" SelectedIndex="0" SelectionChanged="itemSubClassCb_SelectionChanged" />
 
                         <Label FontSize="12" Content="Equip" Height="30" Margin="0,213,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="88"/>
@@ -51,8 +51,10 @@
                     <StackPanel>
                         <DockPanel>
                             <Label FontSize="12" Content="Bag Slots" Height="30" Margin="0,5,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="84"/>
-                            <TextBox x:Name="containerSlotsTxt" Height="25" Margin="0,6,9,0" VerticalAlignment="Top" />
+                            <TextBox x:Name="containerSlotsTxt" Height="25" Margin="0,6,9,0" VerticalAlignment="Top" TextChanged="containerSlotsTxt_TextChanged" />
                         </DockPanel>
+                        <Label FontSize="12" Content="Check to add limits" Height="23" Margin="0,5,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Width="121"/>
+
 
                     </StackPanel>
                 </GroupBox>
