--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="TrinityCreator.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Trinity Creator by RStijn" Height="800" Width="750" MinWidth="675">
+        Title="Trinity Creator by RStijn" Height="800" Width="750" MinWidth="675" Icon="Resources/tclogo.png">
     <TabControl x:Name="tabControl">
         <TabItem Header="Armor &amp; Weapons" Name="armorWeaponsTab" />
         <TabItem Header="Creature" />
